; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdi32/extr_bitmap.c_is_black_pen.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdi32/extr_bitmap.c_is_black_pen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i32, i32, i32)* @is_black_pen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_black_pen(i64 %0, i64 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i64 %0, i64* %7, align 8
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i64, i64* %7, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %5
  %15 = load i64, i64* %8, align 8
  %16 = icmp eq i64 %15, 16777215
  br i1 %16, label %17, label %33

17:                                               ; preds = %14, %5
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %11, align 4
  %21 = call i64 @RGB(i32 %18, i32 %19, i32 %20)
  %22 = icmp ne i64 %21, 16777215
  br i1 %22, label %23, label %30

23:                                               ; preds = %17
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %11, align 4
  %27 = call i64 @RGB(i32 %24, i32 %25, i32 %26)
  %28 = load i64, i64* %8, align 8
  %29 = icmp ne i64 %27, %28
  br label %30

30:                                               ; preds = %23, %17
  %31 = phi i1 [ false, %17 ], [ %29, %23 ]
  %32 = zext i1 %31 to i32
  store i32 %32, i32* %6, align 4
  br label %49

33:                                               ; preds = %14
  %34 = load i32, i32* %9, align 4
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* %11, align 4
  %37 = call i64 @RGB(i32 %34, i32 %35, i32 %36)
  %38 = icmp eq i64 %37, 0
  br i1 %38, label %46, label %39

39:                                               ; preds = %33
  %40 = load i32, i32* %9, align 4
  %41 = load i32, i32* %10, align 4
  %42 = load i32, i32* %11, align 4
  %43 = call i64 @RGB(i32 %40, i32 %41, i32 %42)
  %44 = load i64, i64* %8, align 8
  %45 = icmp eq i64 %43, %44
  br label %46

46:                                               ; preds = %39, %33
  %47 = phi i1 [ true, %33 ], [ %45, %39 ]
  %48 = zext i1 %47 to i32
  store i32 %48, i32* %6, align 4
  br label %49

49:                                               ; preds = %46, %30
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local i64 @RGB(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
